completed Refuel