@@ -1,20 +1,32 @@
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.List;
 
 public class Task {
+
     public static void main(String[] args) {
-        ArrayList<Integer> list = new ArrayList<>(List.of(7,7,7));
-        System.out.println(refuels(list, 7));
 
-        list = new ArrayList<>(List.of(9,1));
-        System.out.println(refuels(list, 3));
+        System.out.println(refuels(new ArrayList<>(Arrays.asList(7, 7, 7)), 7));       // 3
+        System.out.println(refuels(new ArrayList<>(Arrays.asList(9, 1, 3)), 3));       // 4
+        System.out.println(refuels(new ArrayList<>(Arrays.asList(100, 200, 10)), 10)); // 31
     }
 
-    public static int refuels(ArrayList<Integer> deliveries, int gasTank){
+    public static int refuels(ArrayList<Integer> deliveries, int gasTank) {
 
-        //Write your solution here
+        int refuelCount = 0;
+        int currentFuel = 0;
 
+        for (int each : deliveries) {
+
+            int times = each / gasTank;
+            int remainder = each % gasTank;
+
+            refuelCount += times;
+
+            if (remainder > 0) {
+                refuelCount++;
+            }
+        }
+
+        return refuelCount;
     }
-
 }
